tests/invalid_inputs/sema/ctor_call_on_existing_object.cpp

struct S {
	int a;
	S(int n) {
		this->a = n;
	}
};

int main() {
	S s = S(5);
	s.S(6);
}

